--- a/src/App.css
+++ b/src/App.css
@@ -2,38 +2,35 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
 .ContentBlock {
-  background-color: white;
   height: 600px;
   width: 100%;
-  padding: 20px;
   color: white;
   /*To center align search bar and buttons*/
   text-align: center;
   /*To vertical align search bar and buttons*/
-  display: table;
+  /*display: table;*/
+  position: relative;
 }
 
-.ContentMiddle {
+.SearchBar {
   /*To vertical align search bar and buttons*/
-  display: table-cell;
-  vertical-align: middle;
+  /*display: table-cell;*/
+  /*vertical-align: middle;*/
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  height: 10%;
+  width: 50%;
+  margin: -15% 0 0 -25%;
 }
 
-.App-title {
-  font-size: 1.5em;
+.LinksBar {
+  position: absolute;
+  top: 65%;
+  left: 50%;
+  height: 10%;
+  width: 50%;
+  margin: -15% 0 0 -25%;
 }
 
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
-}
