--- a/src/App.css
+++ b/src/App.css
@@ -14,9 +14,11 @@
   width: 100%;
   color: white;
   /*To center and vertical align search bar and buttons*/
-  display: grid;
+  display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
+  align-content: center;
 }
 
 .SearchBar {
@@ -27,8 +29,13 @@
   /*top: 50%;*/
   /*left: 50%;*/
   /*height: 10%;*/
-  /*width: 50%;*/
+  width: 80%;
   /*margin: -15% 0 0 -15%;*/
+  margin-bottom: 100px;
+}
+
+.SearchInput {
+  width: 500px;
 }
 
 .LinksBar {
